# Segmentation_models_for_perception_system

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.jetson  HOW_TO_RUN.md  JETSON.md  README.md  docker-compose.jetson.yml  pyproject.toml  requirements-jetson.txt  requirements-rfdetr-train.txt  requirements.txt
config/: config.yaml  train.yaml  yoloe_discovery_vocab.example.txt  yoloe_military_discovery_vocab.txt
config/detection/: train.yaml
config/optimization/: qat.yaml  resolution_sweep.yaml  sparse.yaml
config/segmentation/: train.yaml
datasets/Detection_Dataset/: README.md
scripts/: annotate_images.py  benchmark_orfd.py  calibrate_ddrnet_goose_channels.py  compare_semantic_models.py  download_datasets.py  eval_segformer_on_datasets.py  export_trt.py  orfd_semantic_comparison.py  render_samples.py  run_headless.py  run_player.py  train_orfd.py  yoloe_discovery_dump.py
scripts/evaluation/: benchmark_orfd.py  compare_semantic_models.py  eval_segformer_on_datasets.py  orfd_semantic_comparison.py
scripts/inference/: compare_tracker_variants.py  run_headless.py  run_player.py
scripts/optimization/: benchmark_jetson.py  compare_models.py  (+6 more)
tests/: conftest.py  test_ap_utils.py  test_bytetrack_tracker.py  test_calibration.py  test_color_parsing.py  test_config_loader.py  test_ddrnet_wrapper.py  test_discovery_vocab.py  test_duplicate_filter.py  test_ema_logits.py  test_factory.py  test_iou_tracker.py  test_orfd_labels.py  test_pipeline.py  test_renderer.py  test_scene_cut.py  test_semantic_catalogues.py  test_semantic_factory.py  test_threshold_gate.py
(+124 files in other folders)
