[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perception"
version = "0.1.0"
description = "Real-time off-road robotics perception (YOLOE + SegFormer + temporal smoothing + PyQt6)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Perception Team" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["perception*"]

[tool.setuptools.package-data]
perception = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
